syntax = "proto3";

package orders;

import "google/protobuf/timestamp.proto";

// Order item model
message OrderItem {
  int32 id = 1;
  int32 order_id = 2;
  int32 product_id = 3;
  int32 quantity = 4;
  double price = 5;
  string title = 6;
  string image = 7;
}

// Order model
message Order {
  int32 id = 1;
  int32 user_id = 2;
  double total = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
  repeated OrderItem order_items = 6;
  int32 payment_id = 7;
  string shipping_address = 8;
}

// Request to create an order
message CreateOrderRequest {
  int32 user_id = 1;
  repeated OrderItem items = 2;
  double total = 3;
  int32 payment_id = 4;
  string shipping_address = 5;
}

// Response after creating an order
message CreateOrderResponse {
  Order order = 1;
  bool success = 2;
  string message = 3;
}

// Request to get order by ID
message GetOrderRequest {
  int32 id = 1;
}

// Response containing an order
message GetOrderResponse {
  Order order = 1;
}

// Request to list orders by user
message ListOrdersByUserRequest {
  int32 user_id = 1;
}

// Response containing multiple orders
message ListOrdersByUserResponse {
  repeated Order orders = 1;
}

// Request to update order status
message UpdateOrderStatusRequest {
  int32 id = 1;
  string status = 2;
}

// Response after updating order status
message UpdateOrderStatusResponse {
  Order order = 1;
  bool success = 2;
  string message = 3;
}

// Order Service definition
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrdersByUser(ListOrdersByUserRequest) returns (ListOrdersByUserResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}